<resources>
    <string name="app_name">bip38decrypt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="decode_button">Decode</string>
    <string name="reencode_button">Reencode</string>
    <string name="create_button">Create</string>
    <string name="mDialogBuilder">Enter password</string>
    <string name="checkBoxShowPassword">Show content</string>
    <string name="noPassword">Password must be set</string>
    <string name="noPassword2">Second password must not be empty</string>
    <string name="title_activity_decode">DecodeActivity</string>
    <string name="edittext_encoded">Encoded</string>
    <string name="edittext_passphrase">Passphrase</string>
    <string name="state_decoding">Decoding</string>
    <string name="state_encoding">Encoding</string>
    <string name="notBipKey">Sorry. It\'s not BIP38 wallet</string>
    <string name="wrongPassword">Sorry, wrong password</string>
    <string name="aboutDifficulty">Current difficulty:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="address_will_be">Address will be like: \n</string>
    <string name="warmingup">Warming up your processors</string>
    <string name="nonbase58">Non Base58 character</string>
    <string name="generating">Generating</string>
    <string name="encrypting">Encrypting</string>
    <string name="clickBackToExit">Please click BACK again to exit</string>

    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_oops">Oops</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_about">About</string>
     <string name="about">Bip38 Decrypt \n
    If you liked it:\n
    1AN4vWSQmEE2rpp1DBP8HwVTdPcf1oGje5</string>
    <string name="donate">1AN4vWSQmEE2rpp1DBP8HwVTdPcf1oGje5</string>
    <string name="title_activity_generate">GenerateActivity</string>
    <string name="new_passphrase">New passphrase</string>
    <string name="wallets_to_generate">Wallets to generate (1)</string>
    <string name="vanity_pattern">Vanity pattern</string>
    <string name="cores_avail">"Cores available: "</string>
    <string name="addrs_per_second">\nAddresses per second: %d</string>


</resources>
