<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bip38_colour">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
        android:text="@string/button_back"
        android:id="@+id/button_create_confirm_back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/ps__button_flat_digg"
        android:minHeight="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
        android:text="@string/button_next"
        android:id="@+id/button_create_confirm_next"
        android:layout_alignTop="@+id/button_create_confirm_back"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ps__button_flat_digg"
        android:minHeight="44dp"
        android:layout_marginRight="16dp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:passwordToggleDrawable="@drawable/ic_passwd_selector"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_passphrase"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:selectAllOnFocus="false"
            android:background="@drawable/bip38_background_dark" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/edittext_passphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_passphrase"
        android:layout_weight="1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp" />

</RelativeLayout>
