<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scrollView">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RelativeLayoutContainer"
            android:background="@color/bip38_colour">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/edittext_encoded"
                android:id="@+id/textView"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="14sp"
                android:layout_marginTop="8dp" />




            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout3"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_wallet"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@drawable/bip38_background_dark"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/button_scan" />

                <ImageButton
                    android:id="@+id/button_scan"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ps__button_flat_digg"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/editText_wallet" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/edittext_passphrase"
                android:id="@+id/textView2"
                android:layout_below="@+id/relativeLayout3"
                android:layout_alignStart="@+id/textView"
                android:layout_marginTop="8dp"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/txtinputlayout"
                app:passwordToggleDrawable="@drawable/ic_passwd_selector"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_passphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="false"
                    android:background="@drawable/bip38_background_dark"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/new_passphrase"
                android:id="@+id/textView3"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/txtinputlayout"
                android:layout_marginTop="8dp"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/newtxtinputlayout"
                app:passwordToggleDrawable="@drawable/ic_passwd_selector"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_newpassphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="false"
                    android:background="@drawable/bip38_background_dark" />
            </android.support.design.widget.TextInputLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/bip38_colour"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_height="48dp"
                android:layout_below="@+id/newtxtinputlayout">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
                    android:text="@string/button_back"
                    android:id="@+id/button_back"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/ps__button_flat_digg"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:minHeight="44dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:text="@string/button_next"
                    android:id="@+id/button_next"
                    android:background="@drawable/ps__button_flat_digg"
                    android:layout_marginRight="16dp"
                    android:layout_alignBaseline="@+id/button_back"
                    android:layout_alignBottom="@+id/button_back"
                    android:layout_alignParentEnd="true"
                    android:minHeight="44dp" />


            </RelativeLayout>




        </RelativeLayout>
    </ScrollView>
</RelativeLayout>