<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bip38_colour">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="9"
        android:visibility="visible"
        android:id="@+id/LLButtons">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1.0"
        android:gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center">
        <Button
            android:layout_weight=".62"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/decode_button"
            android:id="@+id/main_button_decode"
            android:gravity="center"
            android:background="@drawable/ps__button_flat_digg"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:textColor="@color/bip38_text_colour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center"/>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1.0"
        android:gravity="center">
        <Button
            android:layout_weight=".62"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/reencode_button"
            android:id="@+id/main_button_reencode"
            android:gravity="center"
            android:background="@drawable/ps__button_flat_digg"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:textColor="@color/bip38_text_colour" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="1.0"
        android:gravity="center">

        <Button
            android:layout_weight=".62"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_button"
            android:id="@+id/main_button_create"
            android:gravity="center"
            android:background="@drawable/ps__button_flat_digg"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:textColor="@color/bip38_text_colour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center">

            <Button
                android:layout_weight=".62"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/action_about"
                android:id="@+id/main_button_about"
                android:gravity="center"
                android:background="@drawable/ps__button_flat_digg"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:textColor="@color/bip38_text_colour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="1.0"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:weightSum="1"
        android:visibility="invisible"
        android:id="@+id/LLLoading">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar2"
            android:indeterminate="false" />
    </LinearLayout>

</RelativeLayout>
